--- a/index.html
+++ b/index.html
@@ -210,8 +210,8 @@
   </div>
 
 </div>
-<audio id="cardFlip" src="/card_flip.mp3"></audio>
-<audio id="heilSound" src="/heil.mp3" volume="1"></audio>
+<audio id="cardFlip" src="./card_flip.mp3"></audio>
+<audio id="heilSound" src="./heil.mp3" volume="1"></audio>
 </body>
 
 <script type="text/javascript" src="app.js"></script>
